<resources>
    <string name="app_name">Android Boost</string>
    <string name="default_interval">5</string>
    <string name="default_device">default</string>
    <string name="alarmToggle_button_label_on">TBoost On</string>
    <string name="alarmToggle_button_label_off">TBoost Off</string>
    <string name="serviceToggle_button_label_on">Boost On</string>
    <string name="serviceToggle_button_label_off">Boost Off</string>
</resources>
